--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,33 @@
 asgiref==3.2.7
+atomicwrites==1.3.0
+attrs==19.3.0
+colorama==0.4.3
 dj-database-url==0.5.0
 Django==3.0.5
 django-heroku==0.3.1
+et-xmlfile==1.0.1
 gunicorn==20.0.4
+importlib-metadata==1.6.0
+jdcal==1.4.1
+more-itertools==8.2.0
+numpy==1.18.2
+openpyxl==3.0.3
+packaging==20.3
+pandas==1.0.3
+Pillow==7.1.1
+pluggy==0.13.1
 psycopg2==2.8.5
+py==1.8.1
+pyparsing==2.4.7
 PyPDF2==1.26.0
+pytest==5.4.1
+python-dateutil==2.8.1
 pytz==2019.3
+six==1.14.0
 sqlparse==0.3.1
+termcolor==1.1.0
+wcwidth==0.1.9
 whitenoise==5.0.1
+xlrd==1.2.0
+XlsxWriter==1.2.8
+zipp==3.1.0
